fix(analyse): corriger code smells SonarQube - QG PASSED, 344 tests